crates/oxc_css_parser/tests/error/less/mixin/mixin-guard-without-parens.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `;`, but found `<ident>`
  ┌─ mixin-guard-without-parens.less:1:15
  │
1 │ .max (@a, @b) when @a {}
  │               ^^^^


